# cake-web

./: .env.template  .gitignore  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: ci.yml
cake-web-ui/: .eslintrc.cjs  .gitignore  .prettierrc.cjs  LICENSE.md  README.md  index.html  nx.json  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
cake-web-ui/src/: App.css  App.tsx  index.css  main.jsx
cake-web-ui/src/app/: auth.ts  init.ts  store.ts
cake-web-ui/src/components/Cards/: TitleCard.tsx
cake-web-ui/src/components/Input/: InputText.tsx  PaginationInput.tsx  SearchBar.tsx  SelectBox.tsx
cake-web-ui/src/components/Typography/: ErrorText.tsx  Subtitle.tsx  Title.tsx
cake-web-ui/src/containers/: Header.tsx  Layout.tsx  LeftSidebar.tsx  PageContent.tsx  RightSidebar.tsx  SidebarSubmenu.tsx  SuspenseContent.tsx
cake-web-ui/src/dto/: model.ts
cake-web-ui/src/features/charts/: index.jsx
cake-web-ui/src/features/charts/components/: BarChart.jsx  DoughnutChart.jsx  LineChart.jsx  PieChart.jsx  ScatterChart.jsx  StackBarChart.jsx
cake-web-ui/src/features/common/components/: ConfirmationModalBody.tsx  NotificationBodyRightDrawer.tsx
cake-web-ui/src/features/dashboard/: index.tsx
cake-web-ui/src/features/dashboard/components/: BarChart.tsx  DashboardStats.tsx  DashboardTopBar.tsx  DoughnutChart.tsx  LineChart.tsx  PageStats.tsx
cake-web-ui/src/features/pools/: index.tsx  poolDetails.tsx  poolsSlice.ts
cake-web-ui/src/features/settings/billing/: index.tsx
cake-web-ui/src/features/settings/profilesettings/: index.tsx
cake-web-ui/src/features/settings/team/: index.tsx
cake-web-ui/src/features/strategies/: index.tsx  strategiesSlice.ts
cake-web-ui/src/features/transactions/: index.tsx
cake-web-ui/src/features/user/: ForgotPassword.tsx  LandingIntro.tsx  Login.tsx  Register.tsx
cake-web-ui/src/features/user/components/: TemplatePointers.tsx
cake-web-ui/src/pages/: ForgotPassword.tsx  Login.tsx  Register.tsx
cake-web-ui/src/pages/protected/: 404.tsx  Blank.tsx  Charts.tsx  Dashboard.tsx  PoolDetails.tsx  Pools.tsx  ProfileSettings.tsx  Strategies.tsx  Transactions.tsx  UserManagement.tsx
cake-web-ui/src/routes/: index.ts  sidebar.tsx
cake-web-ui/src/services/: webSocketService.ts
cake-web-ui/src/utils/: dummyData.ts  globalConstantUtil.ts
crates/cake-web-actor/: Cargo.toml
crates/cake-web-actor/src/: lib.rs  web_actor.rs
crates/cake-web-base/: Cargo.toml
crates/cake-web-base/src/: lib.rs  openapi.rs  router.rs
crates/cake-web-db/: Cargo.toml
crates/cake-web-db/migrations/2024-07-15-091812_create_users/: down.sql  up.sql
crates/cake-web-db/src/: pool.rs
crates/cake-web-dto/: Cargo.toml
crates/cake-web-dto/src/: lib.rs  model.rs
crates/cake-web-http/: Cargo.toml
crates/cake-web-http/src/: block_handler.rs  lib.rs  model.rs  openapi.rs  pools_handler.rs  router.rs  tokens_handler.rs
crates/cake-web-http/src/dto/: mod.rs  pool.rs  token.rs
crates/cake-web-jwt/: Cargo.toml
crates/cake-web-jwt/src/: check_auth.rs  config.rs  handler.rs  lib.rs  model.rs  openapi.rs  router.rs
crates/cake-web-state/: Cargo.toml
crates/cake-web-state/src/: lib.rs
crates/cake-web-user/: Cargo.toml
crates/cake-web-user/src/: handler.rs  lib.rs  openapi.rs  router.rs  schema.rs
crates/cake-web-user/src/models/: user.rs
crates/cake-web-utils/: Cargo.toml
crates/cake-web-websocket/: Cargo.toml
crates/cake-web-websocket/src/: lib.rs  ws.rs
