[workspace]
resolver = "2"
members = ["bin/cake-web", "crates/cake-web-actor", "crates/cake-web-base", "crates/cake-web-db", "crates/cake-web-dto", "crates/cake-web-http",
    "crates/cake-web-jwt", "crates/cake-web-state", "crates/cake-web-user", "crates/cake-web-utils",
    "crates/cake-web-websocket"]


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
exclude = [".github/"]


[workspace.dependencies]
cake-web-db = { path = "crates/cake-web-db" }
cake-web-user = { path = "crates/cake-web-user" }
cake-web-utils = { path = "crates/cake-web-utils" }
cake-web-jwt = { path = "crates/cake-web-jwt" }
cake-web-websocket = { path = "crates/cake-web-websocket" }
cake-web-state = { path = "crates/cake-web-state" }
cake-web-dto = { path = "crates/cake-web-dto" }
cake-web-http = { path = "crates/cake-web-http" }
cake-web-base = { path = "crates/cake-web-base" }
cake-web-actor = { path = "crates/cake-web-actor" }

# basics
chrono = { version = "0.4.35", features = ["serde"] }
chrono-tz = "0.10.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

# config
dotenv = "0.15.0"

# async
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.11"
async-trait = "0.1.80"
futures-util = "0.3.30"

# error + tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
eyre = "0.6.12"
clap = { version = "4.5.3", features = ["derive"] }
thiserror = "1.0.61"


# serde
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.114"

# db
diesel = { version = "2.2.1", features = ["postgres", "chrono"] }
diesel-async = { git = "https://github.com/weiznich/diesel_async", rev= "6437e59", features = ["postgres", "bb8"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
bb8 = "0.8.5"
influxdb = { version = "0.7.2", features = ["derive"] }

# web
axum = { version = "0.7.5", features = ["macros", "ws"]}
axum-extra = { version = "0.9.3", features = ["typed-header"] }
utoipa = { git="https://github.com/juhaku/utoipa", rev="d020f92", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa", rev="d020f92", features = ["axum"] }
garde = { version = "0.20.0", features = ["full"] }
jsonwebtoken = "9.3.0"
headers = "0.4"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }

# alloy
alloy = { version = "0.3.6", features = ["full"] }
alloy-primitives = { version = "0.8.4", features = ["serde"] }
alloy-chains = "0.1.23"
alloy-rlp = "0.3.4"
alloy-trie = "0.5.1"

alloy-dyn-abi = { version = "0.8.4", features = ["json"] }
alloy-sol-types = { version = "0.8.4", features = ["json"] }
alloy-sol-type-parser = { version = "0.8.4" }
alloy-sol-macro = { version = "0.8.4", features = ["json"] }

alloy-contract = { version = "0.3.6", default-features = false }
alloy-rpc-client = { version = "0.3.6", default-features = false, features = ["ws", "reqwest", "pubsub"] }
alloy-rpc-types = { version = "0.3.6", default-features = false, features = ["eth"] }
alloy-rpc-types-anvil = { version = "0.3.6", default-features = false }
alloy-rpc-types-trace = { version = "0.3.6", default-features = false }
alloy-rpc-types-engine = { version = "0.3.6", default-features = false }
alloy-rpc-types-eth = { version = "0.3.6", default-features = false }
alloy-genesis = { version = "0.3.6", default-features = false }
alloy-node-bindings = { version = "0.3.6", default-features = false }
alloy-provider = { version = "0.3.6", default-features = false, features = [
    "reqwest", "pubsub", "ws", "ipc", "anvil-api", "debug-api", "trace-api", "anvil-node"
] }
alloy-eips = { version = "0.3.6", default-features = false }
alloy-signer = { version = "0.3.6", default-features = false }
alloy-signer-local = { version = "0.3.6", default-features = false }
alloy-network = { version = "0.3.6", default-features = false }
alloy-consensus = { version = "0.3.6", default-features = false }
alloy-transport = { version = "0.3.6", default-features = false }
alloy-pubsub = { version = "0.3.6", default-features = false }
alloy-transport-ws = { version = "0.3.6", default-features = false }
alloy-transport-ipc = { version = "0.3.6", default-features = false }
alloy-transport-http = { version = "0.3.6", default-features = false }
alloy-json-rpc = { version = "0.3.6", default-features = false }

# reth
reth = { git = "https://github.com/paradigmxyz/reth" }
reth-db = { git = "https://github.com/paradigmxyz/reth" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", features = ["test-utils"]}
reth-revm = { git = "https://github.com/paradigmxyz/reth" }
reth-evm = { git = "https://github.com/paradigmxyz/reth" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth" }
reth-errors = { git = "https://github.com/paradigmxyz/reth" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth"}
reth-exex = { git = "https://github.com/paradigmxyz/reth" , features = ["serde"]  }
reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth" }

# revm
revm = { version = "14.0.3", features = [
    "std",
    "secp256k1",
    "blst",
], default-features = false }
revm-primitives = { version = "10.0.0", features = [
    "std",
], default-features = false }
revm-inspectors = "0.7"

## loom
#loom-topology = { git="https://github.com/dexloom/loom.git" }
#loom-actors = { git="https://github.com/dexloom/loom.git" }
#loom-actors-macros = { git="https://github.com/dexloom/loom.git" }
#defi-blockchain = { git="https://github.com/dexloom/loom.git" }
#loom-utils = { git="https://github.com/dexloom/loom.git" }
#defi-actors = { git="https://github.com/dexloom/loom.git" }
#defi-events = { git="https://github.com/dexloom/loom.git" }
#defi-types = { git="https://github.com/dexloom/loom.git" }
#defi-entities = { git="https://github.com/dexloom/loom.git" }
#debug-provider = { git="https://github.com/dexloom/loom.git" }

# loom
loom-actors = { path = "../loom/crates/actors" }
loom-actors-macros = { path = "../loom/crates/actors-macros" }
loom-topology = { path = "../loom/crates/topology" }
defi-blockchain = { path = "../loom/crates/defi-blockchain" }
loom-utils = { path = "../loom/crates/utils" }
defi-actors = { path = "../loom/crates/defi-actors" }
defi-events = { path = "../loom/crates/defi-events" }
defi-types = { path = "../loom/crates/types" }
defi-entities = { path = "../loom/crates/defi-entities" }
debug-provider = { path = "../loom/crates/debug-provider" }

[profile.test]
debug = 1
incremental = true