[package]
name = "cake-web-actor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true
license.workspace = true

[dependencies]
cake-web-db.workspace = true
cake-web-state.workspace = true
cake-web-base.workspace = true

# async
tokio.workspace = true
tokio-util.workspace = true


# tracing + error handling
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true

# web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# loom
loom-actors.workspace = true
loom-actors-macros.workspace = true
loom-utils.workspace = true
defi-actors.workspace = true
defi-blockchain.workspace = true