[package]
name = "cake-web-websocket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true
license.workspace = true

[dependencies]
cake-web-utils.workspace = true
cake-web-user.workspace = true
cake-web-db.workspace = true
cake-web-state.workspace = true
cake-web-dto.workspace = true

tracing.workspace = true
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
headers.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true

# loom
defi-blockchain.workspace = true
defi-events.workspace = true
defi-types.workspace = true